--- a/_posts/2019-02-22-hanyang.markdown
+++ b/_posts/2019-02-22-hanyang.markdown
@@ -60,12 +60,12 @@ comments: true
 ```
 
 결과 >
-- 너트1은 볼트1보다 작다
-- 너트2는 볼트1보다 크다
-- 너트3은 볼트1보다 작다
-- 너트4는 볼트1보다 크다
-- 너트5는 볼트1보다 작다
-- 너트6은 볼트1과 같다.
+1. 너트1은 볼트1보다 작다
+2. 너트2는 볼트1보다 크다
+3. 너트3은 볼트1보다 작다
+4. 너트4는 볼트1보다 크다
+5. 너트5는 볼트1보다 작다
+6. 너트6은 볼트1과 같다.
 
 #### 이제 볼트2번을 비교.
 ```
@@ -79,14 +79,18 @@ comments: true
 - 볼트2는 너트1보다 작다.
 - 볼트2는 너트1보다 작기때문에 볼트1보다 작거나 같다.
 - 그래서 볼트2는 볼트1보다 작은 너트3과 너트5만 비교해주면된다.
+
 ```
 2 -> 3
 2 -> 5 // 3번
 ```
+
 결과 >
 
 - 너트3은 볼트2보다 크다
 - 너트5는 볼트2와 같다.
+
+***
 
 정리 >
 
@@ -102,7 +106,7 @@ comments: true
 5. 너트5 = 볼트2 < 볼트1
 6. 볼트6 = 볼트1 (같은건 더 이상 생각해 줄 필요가 없다.)
 
-이하생략.
+*이하생략*
 
 ## 맺는말
 
