--- a/_posts/2021-06-23-snobbism.markdown
+++ b/_posts/2021-06-23-snobbism.markdown
@@ -14,8 +14,10 @@ header-img: "/img/posts/snobbism/header.jpeg"
 
 ## 스노비즘이란?
 
-먼저, 해당 글을 이해하려면 스놉(snob) 혹은 스노비즘(snobbism)에 관하여 알아두는 것이 좋겠다.  
-스노비즘은 남들보다 자신이 뛰어나다는 생각을 가지고 있으며, 어떠한 본질에 관심은 없지만, **남들에게 보여지는 나**에 더 관심을 가지고 있다는 뜻이다.  
+먼저, 해당 글을 이해하려면 스놉(snob) 혹은 스노비즘(snobbism)에 관하여 알아두는 것이 좋겠다.
+
+스노비즘은 남들보다 자신이 뛰어나다는 생각을 가지고 있으며, 어떠한 본질에 관심이 없지만, **남들에게 보여지는 나**에 더 관심을 가지고 있다는 뜻이다.
+
 예를 들며 설명하는 것이 좋겠다. 다음은 스노비즘을 가진 사람의 자기소개이다.  
 “나는 예술을 향유하는 사람이며, 남들이 이해하지 못하는 작품을 이해해 남들보다 우월한 사람이다. 나는 전시회도 가며 예술영화도 즐겨본다.”
 
@@ -26,7 +28,7 @@ header-img: "/img/posts/snobbism/header.jpeg"
 그래, 너 말은 알겠어. 스노비즘이 뭔지도 알겠고, 근데 그게 개발자랑 무슨 상관인 건데?
 
 개발자라면 알고 있을만한 더닝크루거 효과를 알고있는가?
-![](&&&SFLOCALFILEPATH&&&45601D20-5624-489C-B1A3-AF8B7C5F2414.png)
+![](https://user-images.githubusercontent.com/42797995/122966351-30295d00-d3c4-11eb-9fc2-e720dfb546a0.png)
 
 우리가 얘기해볼 것은 저 **우매함의 봉우리**에 대하여다.  
 개발자라면 누구나 겪는 **개발 중2병**이 있다. 그것이 바로 우매함의 봉우리인데, 본인이 거의 모든 것을 알고 있다 라고 생각하는 병이다.  
