--- a/_posts/2021-06-23-snobbism.markdown
+++ b/_posts/2021-06-23-snobbism.markdown
@@ -47,7 +47,7 @@ A: 아 그렇군요, 알겠습니다.
 
 6개월 뒤, 사무실은 난리가 났다. 우리가 미처 생각지 못한 에러로 서비스에 장애가 난 것이다.
 
-위의 사례를 보자, 지금까지 글의 문맥을 파악하고 글을 읽었다면, B라는 사람이 스노비즘의 성격을 가지고 있다는 것을 눈치챘을 것이다.  
+위의 사례를 보자, 지금까지 글의 문맥을 파악하며 읽었다면, B라는 사람이 스노비즘의 성격을 가지고 있다는 것을 눈치챘을 것이다.  
 넘치는 자신감을 갖고 기술에 대한 정확한 검증도 없이 사용한 것이다. 왜냐고? **난 다 알고 있으니까**
 
 ## 스노비즘을 극복하자
